@@ -602,7 +602,7 @@ class MeetingConfigDescriptor(Descriptor):
         # List of item and meeting states the users in the MeetingConfig
         # corresponding powerObservers group will see the item/meeting
         self.itemPowerObserversStates = ['itemfrozen', 'accepted', 'delayed']
-        self.meetingPowerObserversStates = ['frozen', 'decided', 'closed']
+        self.meetingPowerObserversStates = ['closed']
         self.itemRestrictedPowerObserversStates = []
         self.meetingRestrictedPowerObserversStates = []
         self.usedAdviceTypes = ('positive', 'positive_with_remarks', 'negative', 'nil')
